style.css
/* ... */
@media (max-width: 820px) {
  .process-row {
  padding: 16px 16px 8rem 16px;
}

  .gallery-container {
    grid-template-columns: repeat(1, 1fr);
  }

  .hero-text-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    left: 20px;
    right: 20px;
  }
  
  .hero-title,
  .hero-subtitle {
    text-align: center;
  }

  .company-logo {
    width: 60px;
  }

  .hero-title {
    font-size: 24px;
    width: 100%;
  }

  .credentials-container {
    max-width: 100%;
    gap: 8px;
  }

  .container {
    padding: 4rem 0;
  }

  .owner-img {
    scale: 1.5;
    padding-top: 60px;
  }

  .footer-sub-text {
    width: 300px;
  }

  .social-media-text {
    width: 300px;
  }

  .sub-heading-gallery {
    width: 300px;
  }

  .heading-container {
    flex-direction: column;
    align-items: flex-start;
    margin-bottom: 48px;
  }

  .services-heading {
    margin-bottom: 8px;
  }

  .review-box {
    height: 350px;
    justify-content: space-evenly;
  }

  .testimonials-wrapper {
    grid-template-columns: repeat(1, 1fr);
    margin-top: 40px;
  }

  h2 {
    font-size: 24px;
  }

  .services-heading {
    width: 300px;
  }

  .copyright {
    width: 150px;
  }

  .service-page-container {
    flex-direction: column-reverse;
  }

  .special-service-container {
    grid-template-columns: repeat(2, 1fr);
    width: 100%;
  }

  .service-info {
    width: 100%;
    margin: 32px 0;
  }

  .process-line {
    left: 4px;
  }

  .circle1,
  .circle2,
  .circle3,
  .circle4 {
    left: 4px;
  }

  .process-1,
  .process-2,
  .process-3,
  .process-4 {
    left: 32px;
  }

  .process-diagram {
    width: 100%;
  }

  .service-hero-subtitle {
    width: 300px;
  }

  .service-hero-title {
    font-size: 24px;
  }

  .service-hero-img-wrapper {
    height: 550px;
  }

  .credentials-container-services {
    grid-template-columns: repeat(2, 1fr);
    gap: 8px;
  }
}

@media (max-width: 600px) {
  .hero-button-container {
    flex-direction: column;
  }

  .credential-box {
    height: auto;
    padding: 16px;
  }

  .credential-title {
    font-size: 40px;
  }

  .credential-sub-text {
    text-align: center;
  }

  .PCA-icon {
    width: 120px;
  }

  .review-text {
    left: 2px;
    right: 2px;
    transform: translateY(-50%);
  }

  .owner-img {
    scale: 2.8;
    padding-right: 32px;
    padding-top: 80px;
  }

  .owner-info-container {
    width: 100%;
  }

  .sub-heading {
    width: 350px;
  }

  .specialization {
    width: 100%;
  }

  .footer-heading {
    font-size: 24px;
    margin-bottom: 16px;
  }

  .service-text {
    width: 300px;
    margin-top: 16px;
  }

  .copyright,
  .terms,
  .privacy {
    font-size: 10px;
    width: 100%;
  }

  .terms-container {
    flex-direction: column-reverse;
    align-items: flex-start;
  }

  .service-info-container,
  .service-btn {
    left: 12px;
  }

  .service-icon {
    width: 32px;
  }

  .interior-paint-img,
  .exterior-paint-img {
    height: 400px;
  }

  .drywall-img {
    height: 250px;
  }

  .color-text {
    width: 80%;
  }

  .color-consulting-wrapper {
    left: 16px;
  }

  .process-1,
  .process-2,
  .process-3,
  .process-4 {
    width: 300px;
  }

  footer {
    padding: 8px;
  }

  #service-hero {
    height: 100%;
  }

  .credentials-container-services {
    grid-template-columns: repeat(1, 1fr);
  }
}

#nav_modal {
	position: fixed;
	inset: 0;
	background-color: var(--light-blue);
	z-index: 1001;
	visibility: hidden;
	opacity: 0;
	transition: visibility 300ms ease-in-out, opacity 300ms ease;
}

#nav_modal.show_modal {
	visibility: visible;
	opacity: 1;
}

.nav_modal--container {
	position: relative;
}

.nav_modal--container {
	width: 100%;
	height: 100%;
	padding: 16px;

	display: flex;
	align-items: center;
	justify-content: flex-start;
}

#exit-btn {
	background-color: transparent;
	border: none;
	position: absolute;
	top: 34px;
	right: 26px;
}

.nav_modal--list {
	color: #fff;
	font-size: 14px;
	text-align: start;
	display: flex;
	flex-direction: column;
	gap: 24px;
}

.modal-line {
  width: 100%;
  height: 1px;
  background-color: #fff;
}

.special-links {
  font-size: 16px;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.modal-contact {
  position: absolute;
  bottom: 24px;
  left: 8px;
}

.nj-stories {
  margin-top: 10rem;
}

.write-review {
  width: 100%;
  text-align: center;
}


/* policy page / service page */

#policy-privacy,
#terms-service {
  margin-top: 8rem;
}

#policy-privacy h3,
#terms-service h3 { 
  margin-bottom: 16px;
  color: var(--light-blue);
}

#policy-privacy p,
#terms-service {
  margin-bottom: 8px;
}

